[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
anychain-bitcoin = "0.1.4"
anychain-core = "0.1.3"
random-string = "1.0.1"
libsecp256k1 = "0.7.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
xml = "0.8.10"
once_cell = "1.19.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12"
features = ["framework", "standard_framework", "rustls_backend", "model", "collector"]

[dependencies.pyo3]
version = "0.20.2"
features = ["auto-initialize"]